fix news overflow issue

--- a/src/Components/NewsAggregator/NewsAggregator.css
+++ b/src/Components/NewsAggregator/NewsAggregator.css
@@ -10,6 +10,7 @@
     margin-top: 50px;
     position: relative;
     top: -1.5rem;
+    overflow: hidden;
 }
 
 .NewsAggregator:after {
